test/tests/bad/wrong-main-type.carth
;; WrongMainType

(define: main Int (undefined Unit))
